maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:2: error: not found: type Couple
def trouveDonut() : Couple = {
                    ^